# burst-validation

./: .gitignore  .gitmodules  Cargo.toml  README.md  requirements.txt  requirements_old.txt
benchmark/: Cargo.toml  README.md
benchmark/src/: all_to_all.rs  broadcast.rs  broadcast_bench.rs  gather.rs  lib.rs  main.rs  pair.rs  scatter.rs  send_receive.rs  shuffle.rs
burst-communication-middleware/: Cargo.toml
burst-communication-middleware/src/: middleware.rs  types.rs
hypertuning/: generate_payload.py  gridsearch.py  main.py
hypertuning/hypertuning/: Cargo.toml
hypertuning/hypertuning-lithops/: Dockerfile.k8s  Dockerfile.lambda  hypertuning.py
hypertuning/hypertuning/src/: lib.rs  testing.rs
kmeans/: Cargo.toml  main.py  payload2.json
kmeans/dataset/: Mall_Customers.csv
kmeans/examples/: main-burst.rs  main-mpi.rs
kmeans/kmeans/: Cargo.toml
kmeans/kmeans/src/: lib.rs
kmeans/src/: burst_worker.rs  lib.rs  utils.rs
microbenchmarks/: Cargo.toml  README.md  run_benchmark.sh  run_benchmark_redis.sh  run_pair_redis.sh  run_pair_s3.sh
microbenchmarks/src/: all_to_all.rs  broadcast.rs  gather.rs  lib.rs  main.rs  pair.rs  scatter.rs  shuffle.rs
ow_apps/helpers/: defs.py  parser.py  terasort_helper.py
ow_apps/kmeans/: main.py  payload2.json
ow_apps/send_receive/: main.py
ow_apps/terasort_burst/: README.md  main.py
ow_apps/terasort_classic/: README.md  main.py  terasort_utils.py
ow_client/: README.md  openwhisk_executor.py  parser.py  requirements.txt  result_dataset.py
ow_functions/kmeans/: Cargo.toml
ow_functions/kmeans/examples/: main-burst.rs
ow_functions/kmeans/src/: lib.rs
ow_functions/pagerank/: Cargo.toml
ow_functions/send_receive/: lib.rs
ow_functions/terasort-burst/: Cargo.toml
ow_functions/terasort-burst/src/: lib.rs
ow_functions/terasort-map/: Cargo.toml
ow_functions/terasort-reduce/: Cargo.toml
ow_functions/terasort-utils/: README.md  abort_mpu.py  generate_payload.py
pagerank/: README.md  generate_payload.py  pagerank.py  pagerank_utils.py
pagerank/ow-pr/: Cargo.toml  pagerank_payload.json
pagerank/ow-pr/src/: lib.rs  testing.rs
pagerank/test-dataset/edges/: part-00003
terasort/: Cargo.toml  README.md  abort_mpu.py  generate_payload.py  requirements.txt  sort_1.json  sort_payload.json  sorted_0.csv  sorted_1.csv  sorted_2.csv  sorted_3.csv  terasort_burst.py  terasort_map.py  terasort_mapreduce.py  terasort_reduce.py  terasort_utils.py
terasort/ow-burst/: Cargo.toml
terasort/ow-burst/src/: lib.rs  testing.rs
terasort/ow-map/src/: lib.rs  token_bucket.rs
terasort/ow-reduce/: Cargo.toml
terasort/ow-reduce/src/: lib.rs
terasort/src/: main.rs  sort.rs
terasort/terasort-burst/: Cargo.toml
terasort/terasort-burst/src/: lib.rs  main.rs
terasort/terasort-map/: Cargo.toml
terasort/terasort-map/src/: lib.rs  main.rs
terasort/terasort-reduce/: Cargo.toml
terasort/terasort-reduce/src/: lib.rs  main.rs
