[package]
name = "benchmark"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
burst-communication-middleware = { path = "../burst-communication-middleware" }
tokio = { version = "1.32.0", features = ["full"] }
clap = { version = "4.4.5", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
bytes = "1.5.0"

[[example]]
name = "send_receive"
path = "src/send_receive.rs"

[[example]]
name = "broadcast"
path = "src/broadcast.rs"

[[example]]
name = "shuffle"
path = "src/shuffle.rs"

[[example]]
name = "pair"
path = "src/pair.rs"
