[package]
name = "benchmark"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
burst-communication-middleware = { path = "../burst-communication-middleware" }
tokio = { version = "1.33.0", features = ["full"] }
clap = { version = "4.4.7", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
bytes = "1.5.0"
log = "0.4.20"
