[package]
name = "kmeans"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpi = { version = "0.6", features = ["user-operations", "derive"] }
rand = "0.8.5"
nalgebra = "0.23.2"
smartcore = { version = "0.2.0", features=["nalgebra-bindings"]}
burst-communication-middleware = { path = "../burst-communication-middleware" }
bytes = "1.5.0"
tokio = { version = "1.33.0", features = ["full"] }
log = "0.4.20"
env_logger = "0.9.3"
byteorder = "1.5.0"
bincode = "1.3.3"
aws-sdk-s3 = "0.39.1"
aws-config = { version = "1.0.0", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.0.0", features = [
    "hardcoded-credentials",
] }
s3reader = "1.0.0"

[[bin]]
name = "main-mpi"
path = "examples/main-mpi.rs"

[[bin]]
name = "main-threads"
path = "examples/main-threads.rs"

[[bin]]
name = "main-burst"
path = "examples/main-burst.rs"