[package]
name = "terasort-mapreduce"
version = "0.1.0"
publish = false
edition = "2021"
resolver = "2"

[dependencies]
# aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
# aws-sdk-s3 = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
rusoto_core = "0.48.0"
rusoto_credential = "0.48.0"
rusoto_s3 = "0.48.0"
polars = "0.33.2"
tokio = { version = "1.20.1", features = ["full"] }
http = "0.2"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
bytes = "1.5.0"
