[package]
name = "actions"
version = "0.1.0"
publish = false
edition = "2021"
resolver = "2"

[dependencies]
burst-communication-middleware = { path = "../burst-communication-middleware", features = [
    "redis_list",
] }
log = "0.4.20"
aws-sdk-s3 = { verison = "1.14.0", features = ["behavior-version-latest"] }
aws-config = { version = "1.1.9", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.1.8", features = [
    "hardcoded-credentials",
] }
polars = "0.33.2"
tokio = { version = "1.33.0", features = ["full"] }
http = "0.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
bytes = "1.5.0"

[[bin]]
name = "testing"
path = "src/testing.rs"
