[package]
name = "actions"
version = "0.1.0"
publish = false
edition = "2021"
resolver = "2"

[dependencies]
aws-sdk-s3 = { version = "1.14.0", features = ["behavior-version-latest"] }
aws-config = { version = "1.1.9", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.1.8", features = [
    "hardcoded-credentials",
] }
polars = "0.33.2"
tokio = { version = "1.37.0", features = ["full"] }
http = "0.2"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
bytes = "1.6.0"
futures = "0.3.30"
